--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,5 +1,7 @@
-<ion-content>
-  Hi
+<ion-content class="ion-padding">
+  <div class="button-container">
   <ion-button expand="block" (click)="goToMain()">Start</ion-button>
+  </div>
 </ion-content>
+
 
